--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -221,7 +221,8 @@ Observed wildlings densities in different ecosystem types --- excluding ecosyste
 The "open active landslide" type exceeded these densities around Sitka/Lutz spruce and larch plantations, but was very rare.
 
 Modeled establishment probabilities among ecosystem types tallying at least one wildling and covering at least 1 ha varied by up to five orders of magnitude (fig. \@ref(fig:relative-establishment)).
-Within species, confidence intervals on establishment probabilities in pairs of ecosystem types frequently overlapped.
+Wildling densities calculated directly from the data revealed less variation in establishment probability between ecosystem types --- they were closer to the overall mean --- than the corresponding modeled estimates.
+Within species, confidence intervals on modeled establishment probabilities in pairs of ecosystem types frequently overlapped.
 Nevertheless, establishment probability in many other ecosystem types could be distinguished with a high degree of confidence.
 For example, it is not clear whether the establishment probability of lodgepole pine is higher in the "coastal heath" or "bare rock" types, but it is obviously much higher in both of these than in "forest".
 The pattern of establishment probability among ecosystem types was modestly similar between species, with positive rank correlations in four of six species pairs (tab. \@ref(tab:correlation-table)).
@@ -245,8 +246,12 @@ knitr::kable(cortab,
 ```
 
 Naturally, the variation in establishment probabilities shrank when we used category or structuring process to aggregate ecosystem types (fig. \@ref(fig:relative-establishment-hypotheses)).
+No more than two orders of magnitude separated establishment probabilites of these different groupings.
+Sitka/Lutz spruce and Norway spruce established at higher rates in wetland ecosystem types than terrestial ecosystem types, while the opposite was true for larch and lodgepole pine.
+Sitka/Lutz spruce and Norway spruce also colonized ecosystem types without disturbance-structuring on par with or at a higher rate than disturbance-structured ecosystem types.
+For larch and lodgepole pine, structuring by natural distubance and anthropogenic disturbance, respectively, were associated with the highest rates of colonization. 
 
-```{r relative-establishment-hypotheses, fig.cap="Relative establishment probabilities among categories of ecosystem types (top) or structuring processes in ecosystem types (bottom), for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. Filled points with line intervals show modeled estimates surrounded by their 95% confidence intervals."}
+```{r relative-establishment-hypotheses, fig.cap="Relative establishment probabilities among categories of ecosystem types (top) or structuring processes in ecosystem types (bottom), for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. Filled points with line intervals show modeled estimates surrounded by their 95% confidence intervals. The scale of the x-axis differs by species group and the horizontal dotted line marks the reference level for the comparison."}
 knitr::include_graphics(here('ms', 'figures', 'relative-establishment-hypotheses.pdf'))
 ```
 
