--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -209,7 +209,7 @@ To catch problems with our model specification, we looked for deviation from uni
 We also ran DHARMa's tests for residual over/underdispersion and zero-inflation.
 The Norway spruce model showed residual underdispersion, so we replaced the negative binomial distribution with the generalized Poisson distribution, which solved the issue [@brooksStatisticalModelingPatterns2019].
 Futhermore, the lodgepole pine model did not converge as specified.
-To achieve convergence we dropped locality from the binomial model, as its variance was likely difficult to estimate from only six localities.
+To achieve convergence we dropped locality from the binomial submodel, as its variance was likely difficult to estimate from only six localities.
 
 Relative establishment probabilities of ecosystem types were calculated as predictions from the conditional part of the zero-inflation model (holding covariates at their mean values), scaled by the predicted value for a reference ecosystem type.
 To help summarize patterns in establishment probability among ecosystem types, we aggregated ecosystem types by category (terrestrial or wetland) and structuring process (anthrogenic, natural or no disturbance) and obtained estimates for these strata from refitted models that were otherwise unchanged.
@@ -224,11 +224,11 @@ Modeled establishment probabilities among ecosystem types tallying at least one 
 Wildling densities calculated directly from the data revealed less variation in establishment probability between ecosystem types --- they were closer to the overall mean --- than the corresponding modeled estimates.
 Within species, confidence intervals on modeled establishment probabilities in pairs of ecosystem types frequently overlapped.
 Nevertheless, establishment probability in many other ecosystem types could be distinguished with a high degree of confidence.
-For example, it is not clear whether the establishment probability of lodgepole pine is higher in the "coastal heath" or "bare rock" types, but it is obviously much higher in both of these than in "forest".
+For example, it is not clear whether the establishment probability of lodgepole pine was higher in the "coastal heath" or "bare rock" types, but it was clearly much higher in both of these than in "forest".
 The pattern of establishment probability among ecosystem types was modestly similar between species, with positive rank correlations in four of six species pairs (tab. \@ref(tab:correlation-table)).
 
 Establishment probabilities varied strongly among Sitka/Lutz spruce localities, such that it swamped much of the variation between ecosystem types. 
-For example, the model predicts that "arable fields" at the locality with the highest overall establishment probability and "boreal heath" at the locality with the lowest overall establishment probability would be colonized at roughly equal rates, even though "boreal heath" is colonized more than 100 times faster on average.
+For example, the model predicted that "arable fields" at the locality with the highest overall establishment probability and "boreal heath" at the locality with the lowest overall establishment probability would be colonized at roughly equal rates, even though "boreal heath" is colonized more than 100 times faster on average.
 For the other species, especially for Norway spruce and lodgepole pine, there was much less variation in establishment probabilities among localities. 
 
 ```{r relative-establishment, fig.cap="Relative establishment probabilities among ecosystem types, using 'forest' as the reference level, for four alien conifer species groups. Unfilled points show scaled wildling densities calculated directly from the data. In the case of zero wildlings, these points are placed at the lower limit of the x-axis. Filled points with line intervals show modeled estimates surrounded by their 95% confidence intervals. Grey points show modeled estimates for individual localities. Ecosystem types are ordered by a confidence-weighted mean of their percentile-ranked establishment probabilities within species, such that types with consistently high establishment probability are on top. Ecosystem types shown in italic font are wetlands, and ecosystem types shown in bold font are characterized by disturbance. Ecosystem types without wildlings and covering less than 0.5 ha across all localities for that species are not displayed. Photos licensed CC BY 4.0 Rune Halvorsen."}
@@ -255,9 +255,15 @@ For larch and lodgepole pine, structuring by natural distubance and anthropogeni
 knitr::include_graphics(here('ms', 'figures', 'relative-establishment-hypotheses.pdf'))
 ```
 
-For all species, estimates of seed deposition derived from the WALD model of seed dispersal fit patterns of wildling establishment better than estimates derived from the generalized seed dispersal kernel we tested.  
-Covariate results.
-
+The direct effect of climate on establishment --- not including its effect mediated by ecosystem types --- was negligible for Sitka/Lutz spruce and Norway spruce, with model estimates near zero (Appendix [A5]). 
+For larch there was a negative direct effect of precipitation (Bio19), with a 50 mm increase in coldest-quarter precipitation estimated to decrease establishment six-fold.
+From the six sites with lodgepole pine, the model estimated a very strong negative direct effect of annual temperature (Bio01), with a drop of 2.3 ºC decreasing establishment by five orders of magnitude.
+It also estimated a strong positive effect of precipitation (Bio19), with a 175 mm increase in coldest-quarter precipitation increasing establishment 500 times.
+The direct effect of relative elevation on establishment --- not including its effect mediated by ecosystem types --- was modest and acted in different directions for different species.
+For all species, estimates of seed deposition derived from the WALD model of seed dispersal fit patterns of wildling establishment better than estimates derived from the generalized seed dispersal kernel that we tested.
+There was a high degree of confidence that the effect of relative seed deposition was positive for all species.
+The 95% confidence intervals around plantation age effects included zero in all cases except in the binomial submodels for Sitka/Lutz spruce and larch (where older plantations showed fewer zeros).
+The interaction specified between seed deposition and plantation age was estimated to be positive for Sitka/Lutz spruce, nonexistent for Norway spruce, and negative for larch and lodgepole pine.
 
 # Discussion
 
