changed title to highlight seed dispersal aspect of paper

--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -183,6 +183,20 @@
   number = {7}
 }
 
+@inproceedings{brunduPlantedForestsInvasive2016,
+  title = {Planted Forests and Invasive Alien Trees in {{Europe}}: {{A Code}} for Managing Existing and Future Plantings to Mitigate the Risk of Negative Impacts from Invasions},
+  booktitle = {{{NeoBiota}}},
+  author = {Brundu, Giuseppe and Richardson, David M},
+  year = {2016},
+  volume = {30},
+  pages = {5--47},
+  publisher = {{Pensoft}},
+  address = {{Waikoloa, Hawaii}},
+  doi = {10.3897/neobiota.30.7015},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Brundu and Richardson - 2016 - Planted forests and invasive alien trees in Europe.pdf},
+  keywords = {forest,invasion,management,plantation}
+}
+
 @techreport{brynVeilederKartleggingAv2015,
   title = {Veileder for Kartlegging Av Terrestrisk Naturvariasjon Etter {{NiN}} 2.0. Veileder Versjon 2.0.0.},
   author = {Bryn, Anders and Halvorsen, Rune},
@@ -353,6 +367,39 @@
   keywords = {dispersal,fragmentation,vegetation},
   language = {en},
   number = {2}
+}
+
+@article{chytryHabitatInvasionsAlien2008,
+  title = {Habitat Invasions by Alien Plants: A Quantitative Comparison among {{Mediterranean}}, Subcontinental and Oceanic Regions of {{Europe}}},
+  shorttitle = {Habitat Invasions by Alien Plants},
+  author = {Chytr{\'y}, Milan and Maskell, Lindsay C. and Pino, Joan and Py{\v s}ek, Petr and Vil{\`a}, Montserrat and Font, Xavier and Smart, Simon M.},
+  year = {2008},
+  volume = {45},
+  pages = {448--458},
+  issn = {1365-2664},
+  doi = {10.1111/j.1365-2664.2007.01398.x},
+  copyright = {\textcopyright{} 2007 The Authors. Journal compilation \textcopyright{} 2008 British Ecological Society},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Chytrý et al_2008_Habitat invasions by alien plants.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\jpe_1398_sm_appendixs1-s4.pdf},
+  journal = {Journal of Applied Ecology},
+  keywords = {invasibility,invasion,management},
+  language = {en},
+  number = {2}
+}
+
+@article{chytrySeparatingHabitatInvasibility2008,
+  title = {Separating {{Habitat Invasibility}} by {{Alien Plants}} from the {{Actual Level}} of {{Invasion}}},
+  author = {Chytr{\'y}, Milan and Jaro{\v s}{\'i}k, Vojt{\v e}ch and Py{\v s}ek, Petr and H{\'a}jek, Ond{\v r}ej and Knollov{\'a}, Ilona and Tich{\'y}, Lubom{\'i}r and Danihelka, Ji{\v r}{\'i}},
+  year = {2008},
+  volume = {89},
+  pages = {1541--1553},
+  issn = {1939-9170},
+  doi = {10.1890/07-0682.1},
+  copyright = {\textcopyright{} 2008 by the Ecological Society of America},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Chytrý et al_2008_Separating Habitat Invasibility by Alien Plants from the Actual Level of.pdf},
+  journal = {Ecology},
+  keywords = {climate,invasibility,invasion,propagule pressure},
+  language = {en},
+  number = {6}
 }
 
 @article{cousensWhyWeNot2018,
@@ -808,6 +855,22 @@
   keywords = {forest,sitka spruce}
 }
 
+@article{nygaardSpreadIntroducedSitka2017,
+  title = {Spread of the Introduced {{Sitka}} Spruce ({{Picea}} Sitchensis) in Coastal {{Norway}}},
+  author = {Nygaard, Per and {\O}yen, Bernt-H{\aa}vard},
+  year = {2017},
+  month = jan,
+  volume = {8},
+  pages = {24},
+  issn = {1999-4907},
+  doi = {10.3390/f8010024},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Nygaard_Øyen_2017_Spread of the introduced Sitka spruce (Picea sitchensis) in coastal Norway.pdf},
+  isbn = {1999-4907},
+  journal = {Forests},
+  keywords = {forest,invasion,sitka spruce},
+  number = {1}
+}
+
 @techreport{olsenKartleggingAvKortdistansespredning2016,
   title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr\ae r {{Vrifuru}} ({{Pinus}} Contorta) Og Lutzgran ({{Picea}} \texttimes{} Lutzii)},
   author = {Olsen, Siri Lie and Stabbetorp, Odd and Skarpaas, Olav and Often, Anders and Gajda, Honorata},
@@ -862,6 +925,21 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Prestø et al_2013_Sembrafuru Pinus cembra invaderer bynært kulturlandskap.pdf},
   journal = {Blyttia},
   keywords = {management}
+}
+
+@article{pysekScientistsWarningInvasive2020,
+  title = {Scientists' Warning on Invasive Alien Species},
+  author = {Py{\v s}ek, Petr and Hulme, Philip E. and Simberloff, Dan and Bacher, Sven and Blackburn, Tim M. and Carlton, James T. and Dawson, Wayne and Essl, Franz and Foxcroft, Llewellyn C. and Genovesi, Piero and Jeschke, Jonathan M. and K{\"u}hn, Ingolf and Liebhold, Andrew M. and Mandrak, Nicholas E. and Meyerson, Laura A. and Pauchard, An{\'i}bal and Pergl, Jan and Roy, Helen E. and Seebens, Hanno and van Kleunen, Mark and Vil{\`a}, Montserrat and Wingfield, Michael J. and Richardson, David M.},
+  year = {2020},
+  volume = {n/a},
+  issn = {1469-185X},
+  doi = {10.1111/brv.12627},
+  copyright = {\textcopyright{} 2020 The Authors. Biological Reviews published by John Wiley \& Sons Ltd on behalf of Cambridge Philosophical Society.},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Pyšek et al. - 2020 - Scientists' warning on invasive alien species.pdf},
+  journal = {Biological Reviews},
+  keywords = {global change,invasion,management,policy,review},
+  language = {en},
+  number = {n/a}
 }
 
 @misc{rcoreteamLanguageEnvironmentStatistical2020,
@@ -952,39 +1030,6 @@
   keywords = {dispersal},
   number = {4},
   pmid = {21613168}
-}
-
-@article{sandeSimilarFactorsUnderlie2020,
-  title = {Similar Factors Underlie Tree Abundance in Forests in Native and Alien Ranges},
-  author = {van der Sande, Masha T. and Bruelheide, Helge and Dawson, Wayne and Dengler, J{\"u}rgen and Essl, Franz and Field, Richard and Haider, Sylvia and van Kleunen, Mark and Kreft, Holger and Pagel, Joern and Pergl, Jan and Purschke, Oliver and Py{\v s}ek, Petr and Weigelt, Patrick and Winter, Marten and Attorre, Fabio and Aubin, Isabelle and Bergmeier, Erwin and Chytr{\'y}, Milan and Dainese, Matteo and Sanctis, Michele De and Fagundez, Jaime and Golub, Valentin and Guerin, Greg R. and Guti{\'e}rrez, Alvaro G. and Jandt, Ute and Jansen, Florian and Jim{\'e}nez-Alfaro, Borja and Kattge, Jens and Kearsley, Elizabeth and Klotz, Stefan and Kramer, Koen and Moretti, Marco and Niinemets, {\"U}lo and Peet, Robert K. and Penuelas, Josep and Pet{\v r}{\'i}k, Petr and Reich, Peter B. and Sandel, Brody and Schmidt, Marco and Sibikova, Maria and Violle, Cyrille and Whitfeld, Timothy J. S. and Wohlgemuth, Thomas and Knight, Tiffany M.},
-  year = {2020},
-  volume = {29},
-  pages = {281--294},
-  issn = {1466-8238},
-  doi = {10.1111/geb.13027},
-  copyright = {\textcopyright{} 2019 The Authors. Global Ecology and Biogeography published by John Wiley \& Sons Ltd},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sande et al_2020_Similar factors underlie tree abundance in forests in native and alien ranges.pdf},
-  journal = {Global Ecology and Biogeography},
-  keywords = {abundance,competition,forest,invasion,trait},
-  language = {en},
-  number = {2}
-}
-
-@article{sandstromImpactsDeadWood2019,
-  ids = {sandstromImpactsDeadWood},
-  title = {Impacts of Dead Wood Manipulation on the Biodiversity of Temperate and Boreal Forests. {{A}} Systematic Review},
-  author = {Sandstr{\"o}m, Jennie and Bernes, Claes and Junninen, Kaisa and L{\~o}hmus, Asko and Macdonald, Ellen and M{\"u}ller, J{\"o}rg and Jonsson, Bengt Gunnar},
-  year = {2019},
-  volume = {56},
-  pages = {1770--1781},
-  issn = {1365-2664},
-  doi = {10.1111/1365-2664.13395},
-  copyright = {\textcopyright{} 2019 The Authors Journal of Applied Ecology published by John Wiley \& Sons Ltd on behalf of British Ecological Society},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandström et al_Impacts of dead wood manipulation on the biodiversity of temperate and boreal.pdf},
-  journal = {Journal of Applied Ecology},
-  keywords = {biodiversity,forest},
-  language = {en},
-  number = {7}
 }
 
 @techreport{sandvenKartleggingAvKortdistansespredning2019,
@@ -1087,6 +1132,14 @@
   keywords = {dispersal,fragmentation,landscape,seeds}
 }
 
+@misc{TruaNaturKartlegges2020,
+  title = {{Trua natur kartlegges i stor skala}},
+  year = {2020},
+  month = jun,
+  publisher = {{Milj\o direktoratet}},
+  language = {nb}
+}
+
 @article{vanettenInvasionPatternsPinus2020,
   title = {Invasion Patterns of {{Pinus}} Pinaster in South-West {{Australia}} in Relation to Fire, Vegetation Type and Plantation Management},
   author = {{van Etten}, Eddie J. B. and Belen, C. Anne and {Calvi{\~n}o-Cancela}, Mar{\'i}a},
@@ -1114,6 +1167,22 @@
   journal = {Methods in Ecology and Evolution},
   keywords = {dispersal},
   number = {4}
+}
+
+@article{vanwilgenChallengesTradeoffsManagement2014,
+  title = {Challenges and Trade-Offs in the Management of Invasive Alien Trees},
+  author = {{van Wilgen}, Brian W. and Richardson, David M.},
+  year = {2014},
+  month = mar,
+  volume = {16},
+  pages = {721--734},
+  issn = {1573-1464},
+  doi = {10.1007/s10530-013-0615-8},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\van Wilgen and Richardson - 2014 - Challenges and trade-offs in the management of inv.pdf},
+  journal = {Biological Invasions},
+  keywords = {conifer,ecosystem services,invasion,management},
+  language = {en},
+  number = {3}
 }
 
 @article{vespaFunctionalResponsesEdge2014,
@@ -1217,6 +1286,23 @@
   doi = {10.5849/forsci.15-048},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Yan et al_2016_Comparison of Spatial Distribution Patterns of Seed Rain between Larch.pdf},
   journal = {Forest Science},
+  language = {en},
+  number = {6}
+}
+
+@article{zenniElephantRoomRole2013,
+  title = {The Elephant in the Room: The Role of Failed Invasions in Understanding Invasion Biology},
+  shorttitle = {The Elephant in the Room},
+  author = {Zenni, Rafael D. and Nu{\~n}ez, Martin A.},
+  year = {2013},
+  volume = {122},
+  pages = {801--815},
+  issn = {1600-0706},
+  doi = {10.1111/j.1600-0706.2012.00254.x},
+  copyright = {\textcopyright{} 2013 The Authors},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Zenni_Nuñez_2013_The elephant in the room.pdf},
+  journal = {Oikos},
+  keywords = {invasibility,propagule pressure},
   language = {en},
   number = {6}
 }
