--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Alien conifers spread from plantations into a diverse array of ecosystems: terrestrial and wetland, disturbed and undisturbed'
+title: 'Accounting for propagule pressure reveals that particular ecosystems are much more vulnerable to alien conifer establishment than others, without easily generalizable patterns'
 author:
 - Julien Vollering^[julienvollering@gmail.com]
 - et al.
@@ -30,35 +30,37 @@ Julien Vollering: <https://orcid.org/0000-0002-7409-2898>
 
 # Running head
 
-Alien conifers in Norway
+Ecosystem invasibility to alien conifers
 
 # Abstract
 
 
 # Keywords
 
+invasibility, propagule pressure, disturbance, plantation, conifer
 
 # Introduction
 
 Plantations of alien conifers are widespread in Norway, as they are in many countries, and offspring from these plantations frequently establish in surrounding areas [@richardsonConifersInvasiveAliens2004].
 In many instances these naturalized offspring --- or wildlings --- harm biodiversity and other values, so containing their spread is prudent.
 In particular, plantations contribute to the presence of alien conifers in protected areas, and generate substantial control costs as a result [@mcconnachieEstimatingEffectPlantations2015].
-Containing wildlings prevents secondary and potentially invasive spread, as well as protecting plantation surroundings directly. 
+Controlling wildlings protects plantation surroundings directly, and also prevents secondary and potentially invasive spread. 
 The European "Code of conduct on planted forest and invasive alien trees" stresses that containing alien species to the areas set aside for their cultivation is fundamental to good forestry practice [@brunduPlantedForestsInvasive2016].
 
-A challenge to containing wildlings is that the magnitude of their spread may vary greatly from site to site.
+The magnitude of wildling establishment often varies a lot from site to site [@fernandesWhatDrivesEucalyptus2018], which makes it difficult to manage.
 large observed variation: in abundance, spatial distribution, and growth
   - process of spread: dispersal, germination, survival
-  - dispersal must be accounted for to estimate germination/survival (establishment), most plantation studies do not distinguish.
+  - dispersal must be accounted for to estimate germination/survival (establishment) [catfordQuantifyingLevelsBiological2012], most plantation studies do not distinguish.
 
 In Norway, for example, around some Sitka spruce plantations wildlings are abundant and distant from the plantation boundary.
-Around others there are few or none [@nygaardNaturligSpredningAv1999].
+Around others there are few or none [@nygaardSpreadIntroducedSitka2017].
 
 Depending on how rapidly wildlings spread, their expansion beyond the plantation may be considered invasive. 
 
 Norway has only two native conifer species that cover large areas: Scots pine, *Pinus sylvestris* and Norway spruce, *Picea abies*).
 As a result, 20th century efforts to increase forest cover relied heavily on alien species [@oyenBiomassPotentialSelected2017]. 
 Fertile plantations produce highest propagule pressure on their immediate surroundings, because their seeds are (primarily?) wind-dispersed.
+Note that we use propagule pressure to mean the relative number of seeds deposited in areas around plantations. Usually it refers to levels of introduction at continental scales, but the idea is the same --- it is a normalizing quantity for an observed invasion rate.
 Extensive
 LDD less important
 
@@ -94,6 +96,7 @@ Ecosystem types systematize local ecological conditions and are also a working u
   - in addition to ecosystem types, climate and topography are convenient and common considerations for managers to apply in their decision-making process. 
   
 Studying which habitats are most vulnerable so that intervantions can be prioritized objectively is among the most urgent objectives for invasion science [@pysekScientistsWarningInvasive2020].
+Widespread plantations of wind-dispersed conifers present an opportunity to quantify ecosystem invasibility robustly, by accounting for propagule pressure directly, rather than by proxy [@catfordQuantifyingLevelsBiological2012]. 
   
 RQs:  
 1. In which ecosystem types are wildlings from plantations of alien conifers most and least likely to establish?  
@@ -229,7 +232,7 @@ where $\pi$ is the probability of a zero from the binomial process, while $\mu$ 
 Subscripts $i$, $j$, and $k$ index localities, cells, and ecosystem types.
 
 We standardized variables (except ecosystem types, which were [0,1]) and fitted models with the glmmTMB package [version 1.0, @brooksGlmmTMBBalancesSpeed2017] in R [version 3.6, @rcoreteamLanguageEnvironmentStatistical2020].
-For each species we dropped ecosystem types that completely free of wildlings (to avoid model convergence issues stemming from complete separation).
+For each species we dropped ecosystem types that were completely free of wildlings (to avoid model convergence issues stemming from complete separation).
 We fitted parallel models for our two seed deposition variables and selected the model with the better AIC.
 To catch problems with our model specification, we looked for deviation from uniformity in quantile-scaled, simulated residuals, using the DHARMa package [version 0.2.7, @hartigDHARMaResidualDiagnostics2020].
 We also ran DHARMa's tests for residual over/underdispersion and zero-inflation.
@@ -294,19 +297,25 @@ The interaction specified between seed deposition and plantation age was estimat
 
 # Discussion
 
+Compare results to other assessments of ecosystem invasibility to conifers [@fernandesNaturalRegenerationPinus2016] or to plants more broadly [@chytryHabitatInvasionsAlien2008; @calvino-cancelaInvasivePotentialEucalyptus2013].
+
 1. Two obvious management recommendations: 1) for site selection, try to limit plantations to sites where they are surrounded by arable fields. Where it is simultanueosly desireable to alter adjacent nature types (e.g. by grazing), that is also an option. 2) For early detection and rapid response, prioritize monitoring and control interventions in vulnerable ecosystem types like... 5500 km2 mapped for ecosystem types in Norway.
 
 2. The fact that disturbance events promote invasion does not map directly to ecosystems characterized by distubance being at higher risk than ecosystems not characterized by disturbance. Or, more broadly, invasion patterns of alien conifers frequently clash with our a priori expectations based on their autecology and general tenets of invasion ecology.
+Our disturbance results should not be interpreted to mean that an anthropogenic disturbance event decreases establishment probability relative to prior state (e.g. [@vikaneInvasionCallunaHeath2013] shows that burning in coastal heathland increases Sitka spruce establishment), but that alien conifers are not as likely to establish in anthropogenically disturbed ecosystems --- including ecosystems like arable fields --- as a group.
 
 3. Beware that Sitka colonization varies enormously from site to site --- much more than other species --- so our ability to predict the magnitude of spread at a specific site is limited. More research is needed to probe this unexplained variance (human action?). But that does not mean we cannot or should not use the estimates to guide management! For example, imagine one locality consists entirely of coastal heath and another entirely of arable field. All things being equal, we expect the coastal heath locality to be colonized more than 100 times faster than the arable field locality. Simultaneusly we should not be surprised if they are colonized at equal rates.
 
 
-- Caution against drawing conclusions about the overall invasiveness of species from the comparison of establishment probabilities. The comparison is done for a particular plantation age, under particular climatic conditions, with a particular amount of seed rain --- all of which may vary systematically between species. For example, most lodgepole pine plantations are planted inland but the comparison is under a more oceanic climate, which increases its predicted rate of establishment. Similarly, *Larix* seeds have a higher terminal velocity than *P. abies* and therefore are unlikely to travel as far, but our comparison is at an equal density of seed deposition.
+Caution: do not draw conclusions about the overall invasiveness of species from the comparison of establishment probabilities. The comparison is done for a particular plantation age, under particular climatic conditions, with a particular amount of seed rain --- all of which may vary systematically between species. For example, most lodgepole pine plantations are planted inland but the comparison is under a more oceanic climate, which increases its predicted rate of establishment. Similarly, *Larix* seeds have a higher terminal velocity than *P. abies* and therefore are unlikely to travel as far, but our comparison is at an equal density of seed deposition.
+
+Advantage: establishment patterns are likely to hold in other countries [@chytryHabitatInvasionsAlien2008]. Because the typification system we used is rule-based and aims to be observer-neutral, land managers in other countries can make educated inferences based on our results, even if a compatible or similar typication system does not exist. For example...
 
 Advantage: observational study (registering established individuals rather than doing seeding plots) is that seeds experience only natural conditions, and it measures long-term survival --- the quantity of interest for management.
 
 In the results from the naive approach, variation in the density of wildlings is partly attributable to differences between species and between ecosystem types, and partly to contingent properties of our sample, such as the spatial distribution of ecosystem types around plantations.
 For example, if a particular ecosystem type tended to occur close to plantations, it would likely show higher wildling density than other ecosystem types even if the species were equally likely to establish there.
+Another way of framing this is that the naive approach does not learn from failed invasions --- instances where propagule presure is high but establishment is low [@zenniElephantRoomRole2013].
 Advantage: compared to tallying analysis, we see that the magnitudes of differences between ecosystem types is much larger. For management the difference between a ten-fold gap and a 1000-fold gap matters --- and may draw more attention to plantation surroundings.
 
 Limitation: spatial grain. Minimum polygon area NiN, wildling group locations. A good reason to use a relatively course observation units (100 m2) and to perform fuzzy coding of ecosystem types. Did our best to represent ecotones in the models and not use polygon boundaries overconfidently.
@@ -317,9 +326,8 @@ Limitation: WALD model of seed deposition fits patterns of *establishment* bette
 Limitation: inland versus coastal P.contorta sites. Number of wildlings, climate...
 
 Limitation: wildling establsihment varies not only in number but also in growth rate across ecosystem types. Abundant but slow colonization may be of lesser concern than sparse but fast colonization, depending on management objectives.
-Limitation: 
 
-Note that our models do not estimate the *total* causal effect of climate or relative elevation on wildlings.
+Caution: our models do not estimate the *total* causal effect of climate or relative elevation on wildlings.
 The reason is that each has a causal relationship to wildling number that passes through ecosystem type, which we have adjusted for in our models [@westreichTableFallacyPresenting2013].
 Instead, our models estimate the *direct* effects of climate (through establishment probability alone) and of relative elevation (through seed deposition alone).   
 This distinction means that their estimates should not be used guide management directly.
